2006-09-19  Marcus Brinkmann  <marcus@g10code.de>

	* assuan.h (enum): Avoid trailing comma in enumerator list.  Ugh.

	* mkerrors (_assuan_error): Change return type to assuan_error_t.
	* assuan-buffer.c (_assuan_read_line): Change return type to
	assuan_error_t.  Map returned value of -1.
	(_assuan_write_line): Change type of RC to assuan_error_t.
	* assuan-defs.h (_assuan_read_line, _assuan_error): Likewise for
	prototypes.

	* assuan-defs.h (unsetenv): Define correctly.

2006-09-14  Werner Koch  <wk@g10code.com>

	* assuan-io.c (_assuan_waitpid): New.  Changed all waitpid calls
	to this.

	* assuan.h (_ASSUAN_DEPRECATED): New internal macro.
	(assuan_pipe_connect2): Declare deprecated.
	(assuan_init_connected_socket_server): Declare deprecated.

	* assuan-connect.c (assuan_get_peercred): New.
	* assuan-socket-server.c (accept_connection_bottom): Save uid and gid.

2006-09-13  Werner Koch  <wk@g10code.com>

	* assuan-client.c (assuan_transact): Need to map the error code.
	* mkerrors: Need to map ASSUAN_No_Secret_Key.

	* assuan-pipe-server.c (is_valid_socket): New.
	(assuan_init_pipe_server): Use UDS with the environmet variable is
	set and a valid descriptor is given.  Ignore FILEDES in this case.

	* assuan-socket-server.c (assuan_init_socket_server_ext): New.
	Changed other init fucntions to make use of it.

	* assuan-handler.c (assuan_command_parse_fd): Allow for lowercase
	"fd".
	(std_handler_reset): Close pending fds.
	* assuan-uds.c (uds_receivefd): Fixed.
	(_assuan_uds_close_fds): New.

	* assuan-socket-connect.c (assuan_socket_connect_ext): New. Takes
	all code of assuan_socket_connect plus an option to use sendmsg.
	* assuan-pipe-connect.c (assuan_pipe_connect_ext): New arg FLAGS.

2006-09-12  Werner Koch  <wk@g10code.com>

	* assuan-buffer.c (_assuan_write_line): Also log the prefix.

	* assuan-defs.h (DIM, DIMof): New.

	* assuan-domain-server.c: Removed.
	* assuan-domain-connect.c: Renamed to ..
	* assuan-uds.c: this.